# pro-django

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml
core/core/utils/: collections.py  misc.py  settings.py
core/project/: settings.py
core/project/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py
core/project/settings/templates/: settings.dev.py
project/: settings.py
